--- a/SaboteurX/SaboteurX.csproj
+++ b/SaboteurX/SaboteurX.csproj
@@ -129,6 +129,13 @@
       <DependentUpon>LobbyItem.cs</DependentUpon>
     </Compile>
     <Compile Include="LobbyModel.cs" />
+    <Compile Include="LobbySettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LobbySettings.Designer.cs">
+      <DependentUpon>LobbySettings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LobbySettingsModel.cs" />
     <Compile Include="LobbyWaitingRoom.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -168,6 +175,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LobbyItem.resx">
       <DependentUpon>LobbyItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LobbySettings.resx">
+      <DependentUpon>LobbySettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LobbyWaitingRoom.resx">
       <DependentUpon>LobbyWaitingRoom.cs</DependentUpon>
