--- a/SaboteurX/packages.config
+++ b/SaboteurX/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="4.1.0" targetFramework="net472" />
   <package id="FireSharp" version="2.0.4" targetFramework="net472" />
+  <package id="Fody" version="6.0.0" targetFramework="net472" developmentDependency="true" />
   <package id="LiteDB" version="4.1.4" targetFramework="net472" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net472" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net472" />
