--- a/SaboteurX/SaboteurX.csproj
+++ b/SaboteurX/SaboteurX.csproj
@@ -79,9 +79,13 @@
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.Extensions.Desktop.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="NAudio, Version=1.10.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NAudio.1.10.0\lib\net35\NAudio.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
@@ -152,6 +156,7 @@
       <DependentUpon>LobbyWaitingRoom.cs</DependentUpon>
     </Compile>
     <Compile Include="MoveModel.cs" />
+    <Compile Include="MusicPlayerHelper.cs" />
     <Compile Include="PlayerInformation.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -173,6 +178,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextToAsciiArtConverter.cs" />
+    <Compile Include="MusicControlButtons.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MusicControlButtons.Designer.cs">
+      <DependentUpon>MusicControlButtons.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="DialogScreen.resx">
       <DependentUpon>DialogScreen.cs</DependentUpon>
     </EmbeddedResource>
@@ -201,6 +212,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="StartScreen.resx">
       <DependentUpon>StartScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MusicControlButtons.resx">
+      <DependentUpon>MusicControlButtons.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -233,6 +247,17 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="crystal.ico" />
+    <None Include="Resources\97125__gunnbladez__live-wonk-synth-02.wav" />
+    <None Include="Resources\270333__littlerobotsoundfactory__jingle-win-00.wav" />
+    <None Include="Resources\270334__littlerobotsoundfactory__jingle-lose-01.wav" />
+    <None Include="Resources\270309__littlerobotsoundfactory__craft-00.wav" />
+    <None Include="Resources\build %28online-audio-converter.com%29.mp3" />
+    <None Include="Resources\build.wav" />
+    <None Include="Resources\destroyRoad.wav" />
+    <None Include="Resources\endGame.wav" />
+    <None Include="Resources\powerUp.wav" />
+    <None Include="Resources\powerUp.mp3" />
+    <None Include="Resources\270324_littlerobotsoundfactory_menu-navigate-00 %28online-audio-converter.com%29.mp3" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
