--- a/SaboteurX/packages.config
+++ b/SaboteurX/packages.config
@@ -8,6 +8,7 @@
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net472" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net472" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net472" />
+  <package id="NAudio" version="1.10.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
   <package id="System.Reactive" version="4.0.0" targetFramework="net472" />
 </packages>
