--- a/SaboteurX/packages.config
+++ b/SaboteurX/packages.config
@@ -11,4 +11,5 @@
   <package id="NAudio" version="1.10.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
   <package id="System.Reactive" version="4.0.0" targetFramework="net472" />
+  <package id="WinFormAnimation" version="1.6.0.4" targetFramework="net472" />
 </packages>
