--- a/SaboteurX/packages.config
+++ b/SaboteurX/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autoupdater.NET.Official" version="1.6.0" targetFramework="net472" />
   <package id="Costura.Fody" version="4.1.0" targetFramework="net472" />
   <package id="FireSharp" version="2.0.4" targetFramework="net472" />
   <package id="Fody" version="6.0.0" targetFramework="net472" developmentDependency="true" />
